--- a/index.htm
+++ b/index.htm
@@ -224,12 +224,8 @@
                 <strong>Senior Product Manager, HRIS Sync Lead</strong>
               </p>
               <ul>
-                <li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync Release')">
-                    <strong>HRIS</strong>
-                  </a>
-                  <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')">
-                    <strong>Sync</strong>
-                  </a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval')">
+                <li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync Release')">HRIS</a>
+                  <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')">Sync</a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval')">
                     <strong>Proxy Approval</strong>
                   </a>
                   <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval Details')">
