--- a/index.htm
+++ b/index.htm
@@ -150,8 +150,7 @@
               </p>
               <ul>
                 <li>Launched <a href="https://www.rocketlawyer.com/newsroom/rocket-lawyer-covea-deliver-legal-benefits-to-insurance-customers" id="co-branded-partner-sites-link" onclick="sendCustomTagToClarity('Link Click', 'Co-branded Partner Sites')">
-                    <strong>co-branded partner sites</strong>
-                  </a>, accounting for <strong>16% of European traffic</strong>, establishing a new revenue stream. <ul>
+                    co-branded partner sites</a>, accounting for <strong>16% of European traffic</strong>, establishing a new revenue stream. <ul>
                     <li>OpenID Connect authentication and customizable pricing, content, and access to features.</li>
                   </ul>
                 </li>
@@ -193,9 +192,7 @@
                   <a href="https://core.sendoso.com/blog/scale-globally-with-sendoso/?cmdf=Expanded%20Gift%20Selections" id="sendoso-egift-expansion" onclick="sendCustomTagToClarity('Link Click', 'Sendoso eGift Expansion')">Expanded</a>
                   <strong>US eGift catalog by 23%</strong> and <strong>international catalog by 67%</strong>.
                 </li>
-                <li>Formed <strong>strategic partnerships</strong>, including <a href="https://core.sendoso.com/blog/square-integration/?cmdf=square" id="square-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Square Integration')">
-                    <strong>Square</strong>
-                  </a>, for global market growth. </li>
+                <li>Formed <strong>strategic partnerships</strong>, including <a href="https://core.sendoso.com/blog/square-integration/?cmdf=square" id="square-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Square Integration')">Square</a>, for global market growth. </li>
                 <li>Enhanced eGift internal tooling to <strong>improve operational efficiency</strong> and launched a feature-tiering platform component, <strong>encouraging customer upgrades</strong>. </li>
               </ul>
             </div>
@@ -225,19 +222,11 @@
               </p>
               <ul>
                 <li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync Release')">HRIS</a>
-                  <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')">Sync</a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval')">
-                    <strong>Proxy Approval</strong>
-                  </a>
-                  <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval Details')">
-                    <strong>driven by org chart</strong>
-                  </a>.
+                  <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')">Sync</a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval')">Proxy Approval</a>
+                  <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval Details')"> driven by org chart</a>.
                 </li>
                 <li>Achieved <strong>37% engagement rate</strong> with HRIS features in the first quarter after launch. </li>
-                <li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer" id="bulk-candidate-importer-link" onclick="sendCustomTagToClarity('Link Click', 'Bulk Candidate Importer Details')">
-                    <strong>Self-Serve Bulk Candidate Importer</strong>
-                  </a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import" id="bulk-candidate-importer-link-2" onclick="sendCustomTagToClarity('Link Click', 'Bulk Candidate Importer Details')">
-                    <strong>days to minutes</strong>
-                  </a>. </li>
+                <li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer" id="bulk-candidate-importer-link" onclick="sendCustomTagToClarity('Link Click', 'Bulk Candidate Importer Details')">Self-Serve Bulk Candidate Importer</a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import" id="bulk-candidate-importer-link-2" onclick="sendCustomTagToClarity('Link Click', 'Bulk Candidate Importer Details')">days to minutes</a>. </li>
               </ul>
             </div>
             <div style="">
@@ -271,9 +260,7 @@
               </p>
               <ul>
                 <li>Led the development of AI-powered educational tools: a <strong>Mac app</strong> and a <strong>web-based chatbot</strong>. </li>
-                <li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta" id="hurd-ai-launch" onclick="sendCustomTagToClarity('Link Click', 'Hurd AI Launch')">
-                    <strong>700% user growth</strong>
-                  </a> post launch. </li>
+                <li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta" id="hurd-ai-launch" onclick="sendCustomTagToClarity('Link Click', 'Hurd AI Launch')">700% user growth</a> post launch. </li>
                 <li>Versatility in roles, including Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
               </ul>
             </div>
