--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="engine/main.css" />
     <link rel="stylesheet" href="theme/sanfrancisco.css" />
     <link rel="stylesheet" href="engine/katex/katex.min.css" />
-    <!--<link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />-->
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "kix9xdfw7p");
+    </script>
     <style>
     :root{
 --logo: ;
