--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -169,7 +169,7 @@
 
 <p>&nbsp;</p>
 
-<p><strong>Solution</strong>: Developed a custom Connector over OpenID Connect, ensuring scalability and flexibility.</p></div>
+<p><strong>Solution</strong>: Developed a custom Connector in addition to OpenID Connect, ensuring scalability and flexibility.</p></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
