--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="engine/main.css" />
     <link rel="stylesheet" href="theme/sanfrancisco.css" />
     <link rel="stylesheet" href="engine/katex/katex.min.css" />
-    <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "kix9xdfw7p");
-    </script>
+    <!--<link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />-->
     <style>
     :root{
 --logo: ;
@@ -106,11 +103,11 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image cover-container present fit-warning has-dark-background fitted" data-background-image="images/rocket-lawyer-experience-background.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#431dff" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image cover-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/rocket-lawyer-experience-background.png" data-state="background-opacity-10" data-background-color="#431dff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-      <div class="layout-cover" style="width: 100%; font-size: 0.485rem;">
-        <div style=""><h1 id="understandingthechallenge">Understanding the Challenge</h1>
+      <div class="layout-cover" style="width: 100%; font-size: 0.531rem;">
+        <div style=""><h1 id="thechallenge">The Challenge</h1>
 
 <p>&nbsp;</p>
 
@@ -133,7 +130,7 @@
       <div class="layout-default" style="width: 100%; font-size: 0.344rem;">
         <div style=""><h1 id="solution">Solution</h1>
 
-<h2 id="summary">Summary</h2>
+<h2 id="overview">Overview</h2>
 
 <p>Developed a comprehensive, tailored solution to integrate Rocket Lawyer's legal services with partners, focusing on seamless authentication, co-branding, customized pricing, and exclusive content to expand legal access and market reach.</p>
 
@@ -174,7 +171,7 @@
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       
-</section><section class="variable-size-headings light has-background-image cover-container present fit-warning has-dark-background fitted" data-background-image="images/rocket-lawyer-experience-background.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#8300ff" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image cover-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/rocket-lawyer-experience-background.png" data-state="background-opacity-10" data-background-color="#8300ff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-cover" style="width: 100%; font-size: 0.625rem;">
@@ -286,7 +283,7 @@
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-cover" style="width: 100%; font-size: 1rem;">
-        <div style=""><h1 id="visualshowcase">Visual Showcase</h1></div>
+        <div style=""><h1 id="productwalkthrough">Product Walkthrough</h1></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
@@ -339,7 +336,7 @@
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-default" style="width: 100%; font-size: 0.485rem;">
-        <div style=""><h1 id="impactandresults">Impact and Results</h1>
+        <div style=""><h1 id="outcomes">Outcomes</h1>
 
 <p>&nbsp;</p>
 
@@ -361,7 +358,7 @@
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       
-</section><section class="variable-size-headings light has-background-image cover-container present fit-warning has-light-background fitted" data-background-size="contain" data-background-image="images/rocket-lawyer-experience-background.png" data-state="background-opacity-10" data-background-color="#ff5a19" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image cover-container present fit-warning has-light-background fitted" data-background-image="images/rocket-lawyer-experience-background.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#ff5a19" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-cover" style="width: 100%; font-size: 0.438rem;">
@@ -425,7 +422,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image cover-container present fit-warning has-light-background fitted" data-background-image="images/rocket-lawyer-experience-background.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#ff8300" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image cover-container present fit-warning has-light-background fitted" data-background-size="contain" data-background-image="images/rocket-lawyer-experience-background.png" data-state="background-opacity-10" data-background-color="#ff8300" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-cover" style="width: 100%; font-size: 0.485rem;">
