--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -480,7 +480,7 @@
     <script src="engine/d3v4.min.js" charset="utf-8"></script>
     <script src="engine/charts.min.js" charset="utf-8"></script>
     <script src="engine/billboard.min.js"></script>
-    <script src="https://middleton.io/PptxGenJS/libs/jszip.min.js"></script>
+    <script src="PptxGenJS/libs/jszip.min.js"></script>
     <script src="engine/pptxgen.min.js"></script>
     <script src="engine/pfill.js"></script>
     <script src="engine/published.js"></script>
