--- a/index.htm
+++ b/index.htm
@@ -684,7 +684,7 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
             </svg>
-            <p class="text-lg mb-4 italic">"Kevin is the right people, a go-to PM."</p>
+            <p class="text-lg mb-4 italic">"Kevin possesses a unique ability to blend the art and science of Product Management seamlessly, ensuring that every initiative he undertakes is meticulously executed and driven by creativity and innovation."</p>
             <div class="text-right">
                 <p class="font-semibold">Wesley Barnes</p>
                 <p class="text-gray-600">Director of Product Management</p>
