--- a/index.htm
+++ b/index.htm
@@ -90,13 +90,12 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 <div class="text-center z-10 mb-12">
     <h1 class="text-4xl md:text-6xl font-bold mb-4 text-white">Kevin Middleton</h1>
     <p class="text-xl md:text-2xl mb-2 text-white">Full Stack Product Manager</p>
-    <p class="text-lg md:text-xl mb-8 text-white">Enterprise, Platform, and Consumer SaaS</p>
     <a href="#about" class="bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">Learn More</a>
 </div>
 <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-8 mt-12">
-    <h2 class="text-3xl md:text-4xl font-bold mb-6 text-center text-white">Elevating Products, Driving Growth</h2>
+    <h2 class="text-3xl md:text-4xl font-bold mb-6 text-center text-white">Building Enterprise, Platform, and Consumer SaaS Products</h2>
     <p class="text-lg text-white leading-relaxed">
-        With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive growth and deliver measurable results.
+        With over 10 years of experience in product management, I specialize in turning complex challenges into strategic, data-driven solutions. I’ve built and executed strategies that enhance user engagement, optimize conversion rates, and unite cross-functional teams toward shared goals. My experience spans multiple industries—social media, legal tech, marketing tech, HR tech, EdTech, and HVAC—where I’ve consistently created products that drive growth and deliver measurable outcomes.
     </p>
 </div>
 <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2">
@@ -115,13 +114,13 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         </div>
         <div class="md:w-1/2">
             <p class="text-lg mb-4 text-white">
-                I'm a product manager who thrives on collaboration. My focus is on working with mission-driven teams to create products that make a measurable difference. I bring a data-driven approach to solving complex challenges and fostering growth.
+                I'm a people-centric product manager who thrives on collaboration. My focus is on working with mission-driven teams to create products that make a measurable difference. I bring a data-driven approach to solving complex challenges and fostering growth.
             </p>
             <p class="text-lg mb-4 text-white">
-                I specialize in managing the entire product lifecycle—from strategy to execution—ensuring that every solution makes an impact, boosts engagement, and aligns with business goals.
+                I manage the full product lifecycle—from strategy to execution—ensuring every solution makes an impact, improves engagement, and aligns with business goals.
             </p>
             <p class="text-lg text-white">
-                When I'm not working, you'll find me indulging my inner pop culture nerd with music, movies, TV, and live shows. I also love experimenting in the kitchen with savory dishes and the occasional baking project, and I travel when I find the time.
+                When I’m not working, you’ll find me indulging my inner pop culture nerd with music, movies, TV, and live shows. I also love experimenting in the kitchen with savory dishes and the occasional baking project, and I travel when I find the time.
             </p>
         </div>
     </div>
@@ -150,7 +149,7 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
             <p class="text-gray-600 mb-4">2024 — Present | Charlotte, NC</p>
             <p class="text-gray-700 mb-4">Responsible for developing and optimizing lead generation tools that drive conversions to HVAC.com's paid services. Collaborating closely with marketing, engineering, and design teams, I lead efforts that enhance customer engagement and drive measurable results:</p>
             <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
-                <li><span class="font-semibold">Calculators:</span> Built and launched a suite of calculators, increasing the conversion rate to our paid product from 0.1% to 7.3%.</li>
+                <li><span class="font-semibold">Calculators:</span> Built and launched a suite of calculators, increasing conversion rates from a baseline of 0.1% to 7.3% for homeowners who engaged with the tools.</li>
                 <li><span class="font-semibold">QuoteScore:</span> A tool that helps homeowners understand their HVAC quotes, converting at a 6% rate to our paid offering.</li>
                 <li><span class="font-semibold">Video Content:</span> Homeowners who engage with video content convert to paid products at a 3.4% rate.</li>
                 <li><span class="font-semibold">Landing Pages:</span> Optimized landing pages to achieve a 2.3% conversion rate to paid products.</li>
@@ -179,7 +178,7 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
             </div>
             <p class="text-gray-600 mb-4">2023 | Berkeley, CA</p>
             <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
-                <li>Led the development of AI-powered educational tools: a Mac app and a web-based chatbot.</li>
+                <li><span class="font-semibold">AI-Powered Educational Tools:</span> Led the development of AI-powered educational tools: a Mac app and a web-based chatbot.</li>
                 <li>Drove 700% user growth post launch.</li>
                 <li>Versatility in roles, including Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
             </ul>
