--- a/index.htm
+++ b/index.htm
@@ -733,7 +733,7 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 <div class="container mx-auto px-4">
     <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Let's Connect!</h2>
     <p class="text-center text-lg mb-8 max-w-3xl mx-auto text-white">
-        Whether it's about product management or just to chat, I'd love to connect with you! Feel free to reach out via email, LinkedIn, GitHub, or schedule a call using my Calendly link.
+        Whether it's about product management or just to chat, I'd love to connect with you! Feel free to reach out via email, LinkedIn, or schedule a call using my Calendly link.
     </p>
     <div class="flex justify-center space-x-6">
         <a href="mailto:kevin@middleton.io" class="bg-white text-blue-500 rounded-full p-4 hover:bg-gray-200 transition-colors">
