--- a/index.htm
+++ b/index.htm
@@ -113,7 +113,7 @@ Kevin Middleton
 <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-8 mt-12">
 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-center text-white whitespace-nowrap overflow-hidden text-ellipsis">Building Enterprise, Platform, and Consumer SaaS Products</h2>
 <p class="text-lg text-white leading-relaxed">
-Welcome to our platform. With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
+With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
 </p>
 </div>
 <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2">
