--- a/index.htm
+++ b/index.htm
@@ -58,6 +58,8 @@ cursor: pointer;
     max-width: 90vw;
     padding-right: 1rem;
     padding-left: 1rem;
+    background-color: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(5px);
 }
 </style>
 <!-- Favicon -->
@@ -864,7 +866,6 @@ menuToggle.addEventListener('click', () => {
   menu.classList.toggle('absolute');
   menu.classList.toggle('top-full');
   menu.classList.toggle('right-0');
-  menu.classList.toggle('bg-white');
   menu.classList.toggle('shadow-md');
   menu.classList.toggle('py-2');
   menu.classList.toggle('mobile-menu');
