--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,12 @@
 <title>Kevin Middleton - Full Stack Product Manager</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
+body {
+     font-family: 'Inter', sans-serif;
+   }
+h1, h2, h3, h4, h5, h6 {
+     font-family: 'Inter', sans-serif;
+   }
 .gradient-bg-1 { background: linear-gradient(to bottom, #00a8ff, #205aff); }
 .gradient-bg-2 { background: linear-gradient(to bottom, #205aff, #4021ff); }
 .gradient-bg-3 { background: linear-gradient(to bottom, #4021ff, #5e00ff); }
@@ -110,19 +116,19 @@ Kevin Middleton
 </header>
 
 <main>
-<section id="hero" class="min-h-screen flex flex-col items-center justify-center relative gradient-bg-1">
-<div class="text-center z-10 mb-12">
-<h1 class="text-4xl md:text-6xl font-bold mb-4 text-white">Kevin Middleton</h1>
-<p class="text-xl md:text-2xl mb-8 text-white">Full Stack Product Manager</p>
-<div class="flex justify-center space-x-4">
-<a href="#experience" class="bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
-<a href="#about" class="bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">About Me</a>
-</div>
-</div>
+    <section id="hero" class="min-h-screen flex flex-col items-center justify-center relative gradient-bg-1">
+        <div class="text-center z-10 mb-12">
+          <h1 class="text-4xl md:text-6xl font-bold mb-4 text-white">Kevin Middleton</h1>
+          <p class="text-xl md:text-2xl mb-8 text-white">Full Stack Product Manager</p>
+          <div class="flex justify-center space-x-4 items-center">
+            <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
+            <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
+          </div>
+        </div>
 <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-8 mt-12">
-<h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-center text-white whitespace-nowrap overflow-hidden text-ellipsis">Building Enterprise, Platform, and Consumer SaaS Products</h2>
+<h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-center text-white whitespace-nowrap overflow-hidden text-ellipsis"><span class="inline-block text-[clamp(1.25rem,2.5vw,1.75rem)]">Building Enterprise, Platform, and Consumer SaaS Products</span></h2>
 <p class="text-lg text-white leading-relaxed">
-Welcome to our platform. With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
+With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
 </p>
 </div>
 <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2">
@@ -769,7 +775,7 @@ View More on LinkedIn
 Whether it's about product management or just to chat, I'd love to connect with you! Feel free to reach out via email, LinkedIn, GitHub, or schedule a call using my Calendly link.
 </p>
 <div class="flex justify-center space-x-6">
-<a href="mailto:&#107;&#101;&#118;&#105;&#110;&#46;&#109;&#105;&#100;&#100;&#108;&#101;&#116;&#111;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" class="bg-white text-blue-500 rounded-full p-4 hover:bg-gray-200 transition-colors">
+<a href="mailto:&#107;&#101;&#118;&#105;&#110;&#46;&#109;&#105;&#100;&#100;&#108;&#101;&#116;&#111;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;?subject=Hello%20Kevin%20%E2%80%93%20Let%E2%80%99s%20Connect" class="bg-white text-blue-500 rounded-full p-4 hover:bg-gray-200 transition-colors">
 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
 </svg>
